fix padding on mobile

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -106,6 +106,9 @@ h1 {
 
 h1 > button {
   font-size: 1em;
+  padding-top: 0px;
+  padding-bottom: 2%;
+  padding-right: 4%;
 }
 
 @media only screen and (max-width: 1050px) {
